--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOnvMVJcTPiqTgZxVG/L9ZV",
+      "authorship_tag": "ABX9TyOlqoYftWJ4e2X+PC8aJqK7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4590,6 +4590,149 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "df.dtypes"
+      ],
+      "metadata": {
+        "id": "SpIPmiM1rZuB",
+        "outputId": "e89d71f4-9fa0-40c8-98a5-33b11f1c5901",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 554
+        }
+      },
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "type                      object\n",
+              "fixed acidity            float64\n",
+              "volatile acidity         float64\n",
+              "citric acid              float64\n",
+              "residual sugar           float64\n",
+              "chlorides                float64\n",
+              "free sulfur dioxide      float64\n",
+              "total sulfur dioxide     float64\n",
+              "density                  float64\n",
+              "pH                       float64\n",
+              "sulphates                float64\n",
+              "alcohol                  float64\n",
+              "quality                    int64\n",
+              "gama                    category\n",
+              "gamaNro                 category\n",
+              "dtype: object"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>0</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>type</th>\n",
+              "      <td>object</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>fixed acidity</th>\n",
+              "      <td>float64</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>volatile acidity</th>\n",
+              "      <td>float64</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>citric acid</th>\n",
+              "      <td>float64</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>residual sugar</th>\n",
+              "      <td>float64</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>chlorides</th>\n",
+              "      <td>float64</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>free sulfur dioxide</th>\n",
+              "      <td>float64</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>total sulfur dioxide</th>\n",
+              "      <td>float64</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>density</th>\n",
+              "      <td>float64</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>pH</th>\n",
+              "      <td>float64</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>sulphates</th>\n",
+              "      <td>float64</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>alcohol</th>\n",
+              "      <td>float64</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>quality</th>\n",
+              "      <td>int64</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>gama</th>\n",
+              "      <td>category</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>gamaNro</th>\n",
+              "      <td>category</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> object</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 66
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **🔹 Escalado: estandarización de los datos**\n",
+        "---\n",
+        "\n",
+        "Ver clase Complementaria del 31/10, minuto 45.\n",
+        "Se debe hacer LUEGO de remover outliers.\n",
+        "Para variables numéricas\n"
+      ],
+      "metadata": {
+        "id": "LhUkU0pqupaS"
+      }
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "## **🔹 Análisis de variables categóricas**"
@@ -6302,6 +6445,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### **🔹 Análisis Estadístico**\n"
+      ],
+      "metadata": {
+        "id": "ccifFr5Uwpim"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "plt.figure(figsize=(12,3))\n",
@@ -6339,7 +6491,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### **Análisis de Outliers**"
+        "### **🔹 Identificación de Outliers**\n"
       ],
       "metadata": {
         "id": "9cR15dZS9fkr"
@@ -6492,7 +6644,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### **Análisis de corelación**"
+        "### **🔹 Análisis de corelación**"
       ],
       "metadata": {
         "id": "XJ6LdDjQFRiK"
