--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOlqoYftWJ4e2X+PC8aJqK7",
+      "authorship_tag": "ABX9TyNQeltWy7hxhDaQxXBlwKfP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -71,6 +71,7 @@
         "### **🌀 Introducción**\n",
         "\n",
         "Mediante este proyecto se pretende analizar los datos vinculados a la calidad de los vinos de Portugal. Para ello, se plantearán distintas hipótesis que serán evaluadas mediante análisis estadístico. Se espera, además, identificar patrones y/o tendencias que pudieran predecir la calificación promedio de un vino.\n",
+        "![Datset Cover](https://github.com/eugeinga/CODER-DataScienceII/raw/main/IMG/IMG-dataset-cover.jpg)\n",
         "\n",
         "### **🌀 Acerca del set de datos**\n",
         "\n",
@@ -115,6 +116,8 @@
         "import seaborn as sns                 # visualización de gráficos\n",
         "from matplotlib import pyplot as plt  # visualización de gráficos\n",
         "import missingno as msno              # visualización de datos faltantes\n",
+        "\n",
+        "#warnings.filterwarnings(\"ignore\")\n",
         "\n",
         "sns.set_theme(style=\"whitegrid\", palette=\"pastel\") # Estilo de seaborn"
       ]
@@ -1124,7 +1127,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##### El dataset tiene 1170 filas duplicadas que son eliminadas; de esta manera, el dataset resultante posee 5327 filas y 13 columnas."
+        "##### El dataset tiene 1170 filas duplicadas que son eliminadas dado que a los fines de este trabajo (predecir la calidad de los vinos) entradas idénticas no aportan valor; de esta manera, el dataset resultante posee 5327 filas y 13 columnas."
       ],
       "metadata": {
         "id": "U24VOaI1rI0E"
@@ -1562,17 +1565,17 @@
       "source": [
         "# Contabilizo los datos nulos/faltantes por columna.\n",
         "\n",
-        "pd.DataFrame({'Cant.NAN' : df.isna().sum(), '%NAN' : df.isna().sum() / (df.shape[0]) * (100)}).round(2)"
+        "pd.DataFrame({'Cant.NAN' : df.isna().sum(), '%NAN' : df.isna().sum() / len(df) * (100)}).round(2)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 457
+          "height": 520
         },
         "id": "Uri8fSIReBF5",
-        "outputId": "cd3991a5-27b8-4ee1-e86f-86531aecd8ea"
+        "outputId": "f6854108-5fc3-4875-8acc-dd54a5b4f106"
       },
-      "execution_count": 10,
+      "execution_count": 70,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1591,11 +1594,13 @@
               "pH                           9  0.14\n",
               "sulphates                    4  0.06\n",
               "alcohol                      0  0.00\n",
-              "quality                      0  0.00"
+              "quality                      0  0.00\n",
+              "gama                         0  0.00\n",
+              "gamaNro                      0  0.00"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-e5f68668-c132-4739-b029-22a4aa07741c\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-75715347-69be-4cab-bfe6-4e4cf9d757f5\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1684,13 +1689,23 @@
               "      <td>0</td>\n",
               "      <td>0.00</td>\n",
               "    </tr>\n",
+              "    <tr>\n",
+              "      <th>gama</th>\n",
+              "      <td>0</td>\n",
+              "      <td>0.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>gamaNro</th>\n",
+              "      <td>0</td>\n",
+              "      <td>0.00</td>\n",
+              "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e5f68668-c132-4739-b029-22a4aa07741c')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-75715347-69be-4cab-bfe6-4e4cf9d757f5')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1742,12 +1757,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-e5f68668-c132-4739-b029-22a4aa07741c button.colab-df-convert');\n",
+              "        document.querySelector('#df-75715347-69be-4cab-bfe6-4e4cf9d757f5 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-e5f68668-c132-4739-b029-22a4aa07741c');\n",
+              "        const element = document.querySelector('#df-75715347-69be-4cab-bfe6-4e4cf9d757f5');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1767,8 +1782,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-61e5259f-91fc-466b-9e70-9750ebd3513f\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-61e5259f-91fc-466b-9e70-9750ebd3513f')\"\n",
+              "<div id=\"df-a9ef71b4-27b5-41af-a2c5-15251956c475\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-a9ef71b4-27b5-41af-a2c5-15251956c475')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1887,7 +1902,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-61e5259f-91fc-466b-9e70-9750ebd3513f button');\n",
+              "        document.querySelector('#df-a9ef71b4-27b5-41af-a2c5-15251956c475 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1899,11 +1914,11 @@
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "dataframe",
-              "summary": "{\n  \"name\": \"pd\",\n  \"rows\": 13,\n  \"fields\": [\n    {\n      \"column\": \"Cant.NAN\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 3,\n        \"min\": 0,\n        \"max\": 10,\n        \"num_unique_values\": 7,\n        \"samples\": [\n          0,\n          10,\n          9\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"%NAN\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 0.0566591246866417,\n        \"min\": 0.0,\n        \"max\": 0.15,\n        \"num_unique_values\": 7,\n        \"samples\": [\n          0.0,\n          0.15,\n          0.14\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
+              "summary": "{\n  \"name\": \"pd\",\n  \"rows\": 15,\n  \"fields\": [\n    {\n      \"column\": \"Cant.NAN\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 3,\n        \"min\": 0,\n        \"max\": 10,\n        \"num_unique_values\": 7,\n        \"samples\": [\n          0,\n          10,\n          9\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"%NAN\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 0.05475486497193869,\n        \"min\": 0.0,\n        \"max\": 0.15,\n        \"num_unique_values\": 7,\n        \"samples\": [\n          0.0,\n          0.15,\n          0.14\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
             }
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 70
         }
       ]
     },
@@ -4595,12 +4610,12 @@
         "df.dtypes"
       ],
       "metadata": {
-        "id": "SpIPmiM1rZuB",
-        "outputId": "e89d71f4-9fa0-40c8-98a5-33b11f1c5901",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 554
-        }
+        },
+        "id": "SpIPmiM1rZuB",
+        "outputId": "e89d71f4-9fa0-40c8-98a5-33b11f1c5901"
       },
       "execution_count": 66,
       "outputs": [
@@ -4721,7 +4736,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## **🔹 Escalado: estandarización de los datos**\n",
+        "## **🔹 Feature Eng - Escalado: estandarización de los datos**\n",
         "---\n",
         "\n",
         "Ver clase Complementaria del 31/10, minuto 45.\n",
