--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNtUXKFZlhIRbqC8rdyJhFi",
+      "authorship_tag": "ABX9TyMj74oVGHP7W48wK/woklfu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1745,11 +1745,37 @@
       "source": [
         "## **🔹 Agrupacion de Características (Feature Binning)**\n",
         "\n",
-        "A fin de Facilitar el análisis de los datos se dividen las calidades en intervalos discretos no superpuestos (bins)."
+        "A fin de facilitar el análisis de los datos se dividen las calidades en intervalos discretos no superpuestos (bins)."
       ],
       "metadata": {
         "id": "TqgrnLvyRwPV"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.quality.unique()"
+      ],
+      "metadata": {
+        "id": "NdGWYa8UH9k7",
+        "outputId": "4eb76ffe-9cbb-4e70-bc01-826003a20dd0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([6, 5, 7, 8, 4, 3, 9])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 73
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -2032,11 +2058,11 @@
       "source": [
         "'''\n",
         "def gama(quality):\n",
-        "    if quality <= 3:\n",
+        "    if quality <= 4:\n",
         "        return 'Baja'\n",
-        "    elif quality <= 6:\n",
+        "    elif quality <= 5:\n",
         "        return 'Media'\n",
-        "    elif quality <= 8:\n",
+        "    elif quality <= 7:\n",
         "        return 'Alta'\n",
         "    else:\n",
         "        return 'Superior'\n",
@@ -2072,8 +2098,8 @@
     {
       "cell_type": "code",
       "source": [
-        "#df['gama'] = df['quality'].apply(lambda x: 'Baja' if x <= 3 else ('Media' if x <= 6 else ('Alta' if x <= 8 else 'Superior')))\n",
-        "#df['gama'] = df.quality.apply(lambda x: 'Baja' if x <= 3 else ('Media' if x <= 6 else ('Alta' if x <= 8 else 'Superior')))\n",
+        "#df['gama'] = df['quality'].apply(lambda x: 'Baja' if x <= 4 else ('Media' if x <= 5 else ('Alta' if x <= 7 else 'Superior')))\n",
+        "#df['gama'] = df.quality.apply(lambda x: 'Baja' if x <= 4 else ('Media' if x <= 5 else ('Alta' if x <= 7 else 'Superior')))\n",
         "rangos = [\"Baja\", \"Media\", \"Alta\", \"Superior\"]\n",
         "df['gama'] = pd.cut(df['quality'], bins=[0, 4, 5, 7, 10], labels=rangos)\n",
         "df.head()"
@@ -2724,7 +2750,9 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "Se convierten las variables categóricas en valores numéricos para su posterior uso con los algoritmos de Machine Learning."
+      ],
       "metadata": {
         "id": "ZIR3dopNezas"
       }
