--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOFdSLF+wQ1xAS9SBbkeoyY",
+      "authorship_tag": "ABX9TyNdgDDyu+l55uK8uUJNnhJe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5052,16 +5052,18 @@
     {
       "cell_type": "code",
       "source": [
+        "# Analizo la distribución de las calidades de los vinos\n",
+        "\n",
         "from seaborn import displot\n",
         "displot(df.quality, kind='hist', kde=True)"
       ],
       "metadata": {
-        "id": "CJd2F6A4xUQT",
-        "outputId": "50b1ad35-2eb2-425e-ba18-dcde9ef24723",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 518
-        }
+        },
+        "id": "CJd2F6A4xUQT",
+        "outputId": "50b1ad35-2eb2-425e-ba18-dcde9ef24723"
       },
       "execution_count": 65,
       "outputs": [
@@ -5090,6 +5092,8 @@
     {
       "cell_type": "code",
       "source": [
+        "# Comparo la distribución de las calidades de los vinos por tipo de vino\n",
+        "\n",
         "plt.figure(figsize=(10, 6))\n",
         "sns.histplot(data=df, x='quality', hue='type', kde=True, element=\"step\", stat=\"density\", common_norm=False)\n",
         "plt.title('Distribución de la Calidad del Vino por Tipo')\n",
@@ -5122,6 +5126,8 @@
     {
       "cell_type": "code",
       "source": [
+        "# Comparo la distribución de la variable calidad con la gama de vinos.\n",
+        "\n",
         "plt.figure(figsize=(8, 4))\n",
         "\n",
         "plt.subplot(1, 2, 1)\n",
