--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOW9fjC72RgUQU91A511gob",
+      "authorship_tag": "ABX9TyNOYvCB1xyXFmF3+qUxGSWA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2775,12 +2775,12 @@
         "displot(df.quality, kind='hist', kde=True)"
       ],
       "metadata": {
-        "id": "XMyRtUPf4_cx",
-        "outputId": "abb9246e-e897-48fd-af4e-e53364622e41",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 518
-        }
+        },
+        "id": "XMyRtUPf4_cx",
+        "outputId": "abb9246e-e897-48fd-af4e-e53364622e41"
       },
       "execution_count": 85,
       "outputs": [
@@ -4100,6 +4100,7 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# **🟡 PENDIENTE !!!!!!**\n",
         "## **🔹 Feature Eng - Escalado: estandarización de los datos**\n",
         "---\n",
         "\n",
