--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMar8r3lltrSZ0ZV6aw+eYK",
+      "authorship_tag": "ABX9TyMV4lg6utdW4kAnJfMtZJlo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4867,7 +4867,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### Si bien existen outliers para las variables bajo estudio, en general, los mismos se encuentran dentro del dominio esperado y no serán ajustados. No obstante, se analizará con mayor detalle el caso de los outliers asociados a los niveles de azufre que están por encima de la cota máxima del boxplot."
+        "# 🟡 OJO\n",
+        "\n",
+        "#### Si bien existen outliers para las variables bajo estudio, en general, los\n",
+        "\n",
+        "---\n",
+        "\n",
+        "mismos se encuentran dentro del dominio esperado y no serán ajustados. No obstante, se analizará con mayor detalle el caso de los outliers asociados a los niveles de azufre que están por encima de la cota máxima del boxplot."
       ],
       "metadata": {
         "id": "Lx3Ht2Z1vo66"
